@@ -3,10 +3,10 @@ package com.lievasoft.bio.service;
 import com.lievasoft.bio.controller.LoginRequest;
 import com.lievasoft.bio.controller.RegisterRequest;
 import com.lievasoft.bio.controller.TokenResponse;
+import com.lievasoft.bio.entity.BioUser;
 import com.lievasoft.bio.entity.Token;
-import com.lievasoft.bio.entity.User;
+import com.lievasoft.bio.repository.BioUserRepository;
 import com.lievasoft.bio.repository.TokenRepository;
-import com.lievasoft.bio.repository.UserRepository;
 import jakarta.persistence.EntityExistsException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -24,36 +24,35 @@ public class DefaultAuthService implements AuthService {
 
     private final TokenRepository tokenRepository;
     private final PasswordEncoder passwordEncoder;
-    private final UserRepository userRepository;
+    private final BioUserRepository bioUserRepository;
     private final JwtService jwtService;
     private final AuthenticationManager authenticationManager;
 
     @Override
     public TokenResponse register(final RegisterRequest request) {
-        if (userRepository.existsByEmail(request.email())) {
-            String message = String.format("User with email %s already exists", request.email());
-            log.warn(message);
-            throw new EntityExistsException(message);
+        if (bioUserRepository.existsByUsername(request.username())) {
+            var msg = "User with username %s already exists".formatted(request.username());
+            log.error(msg);
+            throw new EntityExistsException(msg);
         }
 
-        User persistedUser = saveUser(request);
+        var persistedUser = saveBioUser(request);
         String jwtToken = jwtService.generateToken(persistedUser);
         String refreshToken = jwtService.generateRefreshToken(persistedUser);
-        saveUserToken(persistedUser, jwtToken);
+        saveBioUserToken(persistedUser, jwtToken);
         return new TokenResponse(jwtToken, refreshToken);
     }
 
-    private User saveUser(RegisterRequest request) {
-        var userToPersist = User.builder()
-                .email(request.email())
+    private BioUser saveBioUser(RegisterRequest request) {
+        var bioUserToPersist = BioUser.builder()
+                .username(request.username())
                 .password(passwordEncoder.encode(request.password()))
-                .name(request.name())
                 .build();
 
-        return userRepository.save(userToPersist);
+        return bioUserRepository.save(bioUserToPersist);
     }
 
-    private void saveUserToken(User user, String jwtToken) {
+    private void saveBioUserToken(BioUser user, String jwtToken) {
         Token tokenToPersist = Token.builder()
                 .user(user)
                 .token(jwtToken)
@@ -68,7 +67,7 @@ public class DefaultAuthService implements AuthService {
         var authentication = new UsernamePasswordAuthenticationToken(request.email(), request.password());
         Authentication authenticated = authenticationManager.authenticate(authentication);
         var principal = (UserDetails) authenticated.getPrincipal();
-        System.out.println(principal.getUsername());
+
 
         return null;
     }
